// Copyright (C) 2024 Declan Teevan
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package stocklet.user.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/user/v1;user_v1";

message User {
  string id = 1 [(buf.validate.field).string.min_len = 1];

  string email = 2 [(buf.validate.field).string.email = true];

  string first_name = 3 [(buf.validate.field).string = {
    min_len: 1;
    max_len: 35;
  }];
  string last_name = 4 [(buf.validate.field).string = {
    min_len: 1;
    max_len: 35;
  }];

  int64 created_at = 5;
  optional int64 updated_at = 6;
}
